--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,21 @@
 <header>
-    <div class="header-content">
-        <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
-            <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
-        </div>
+  <div class="header-content">
+    <div class="header-content-inner">
+      <h1>태라미<br />rami tae</h1>
+      <h2>Backend engineer</h2>
+      <hr />
+      <p>
+        <b>1. 도전하는 것에 익숙합니다.</b><br />
+        하고 싶은 일을 찾아 건축디자인, 전자공학 H/W, 임베디드 S/W를 거쳐 백엔드 개발자가 되었으며 최종적으로는 풀스택 개발자가 되고 싶습니다. 제 인생은 항상 도전이었고 새로운 기술에 도전하는 것을 좋아합니다.<br /><br />
+        <b>2. 체력이 좋습니다.</b><br />
+        꾸준한 운동을 통해 탄탄한 체력을 가지고 있습니다.<br />
+        주로 달리기와 실내사이클로 운동합니다. 달릴 때 바람을 맞으며 계절의 변화를 느끼는 것과 근육통을 좋아합니다.<br /><br />
+      </p>
+      <p>
+        <b>ramiTae.dev@gmail.com<b/><br>
+        <a href="https://github.com/RamiTae"><b>Github<b/></a> | <a href="https://ram-t.tistory.com/"><b>Blog<b/></a> 
+      </p>
+      <a href="../data/ramiTae_resume.pdf" target="_blank" class="btn btn-primary btn-xl">Resume</a>
     </div>
+  </div>
 </header>
