:bug: Fix resume attach error

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
         <b>ramiTae.dev@gmail.com<b/><br>
         <a href="https://github.com/RamiTae"><b>Github<b/></a> | <a href="https://ram-t.tistory.com/"><b>Blog<b/></a> 
       </p>
-      <a href="../data/ramiTae_resume.pdf" target="_blank" class="btn btn-primary btn-xl">Resume</a>
+      <a href="data/ramiTae_resume.pdf" target="_blank" class="btn btn-primary btn-xl">Resume</a>
     </div>
   </div>
 </header>
