--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,12 +1,32 @@
 <section class="bg-primary" id="about">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
-                <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 text-center">
+        <h2 class="section-heading">'태라미'는?</h2>
+        <hr class="light" />
+        <p>
+          <b>1. 도전하는 것에 익숙합니다.</b><br />
+          하고 싶은 일을 찾아 건축디자인, 전자공학 H/W, 임베디드 S/W를 거쳐 백엔드 개발자가 되었으며 최종적으로는 풀스택 개발자가 되고 싶습니다. 제게 있어 인생은 항상 도전입니다.
+        </p>
+        <p>
+          <b>2. 체력이 좋습니다.</b><br />
+          꾸준한 운동을 통해 탄탄한 체력을 가지고 있습니다.<br />
+          주로 달리기와 실내사이클로 운동합니다. 달릴 때 바람을 맞으며 계절의 변화를 느끼는 것과 근육통을 좋아합니다.
+        </p>
+        <p>
+          <b>3. 블로깅을 열심히 합니다.</b><br />
+          2019년 7월부터 블로깅을 시작해 현재까지 60개 이상의 포스트를 써왔습니다.<br />
+          어떤 것을 배우거나 익힐 때 그 당시에는 이해가 되던 것들도 시간이 지나면 자연스레 잊게 됩니다. 그런 문제를 줄이기 위해 블로깅을 꾸준히 하고 있습니다!
+        </p>
+        <br />
+        <!-- <a href="#about-detail" class="btn btn-default btn-xl">더 알아보기</a> -->
+        <!-- <details markdown="1">
+          <summary><a class="btn btn-default btn-xl">더 알아보기</a></summary>
+          <hr class="light" />
+
+          <p>이렇게 하면?</p>
+        </details> -->
+      </div>
     </div>
+  </div>
 </section>
