--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,9 +2,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
+                <h2 class="section-heading">저에게 연락하고 싶으시다면?</h2>
                 <hr class="primary">
-                <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                <p>아래의 블로그, 이메일, 깃헙 중 편한 방법으로 연락해주세요.<br>
+                    가능한 한 빨리 답변 드리겠습니다!</p>
             </div>
         <div class="col-lg-2 col-lg-offset-2 text-center">
             <a href="https://ram-t.tistory.com/">
