--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <meta name="author" content="" />
 
   <title>RamiTae</title>
-  <link rel="shortcut icon" type="image⁄x-icon" href="../img/icon.png" />
+  <link rel="shortcut icon" type="image⁄x-icon" href="{{site.asset_url}}/icon.png" />
 
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
