--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -155,7 +155,7 @@ header {
   min-height: auto;
   @include background-cover;
   background-position: center;
-  background-image: url("../img/portfolio-main.jpg");
+  background-image: url("../assets/portfolio-main.jpg");
   text-align: center;
   color: white;
   .header-content {
