--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
-<header>
+<header style="
+background-image: url('{{site.asset_url}}/portfolio-main.jpg');">
   <div class="header-content">
     <div class="header-content-inner">
       <h1>태라미<br />rami tae</h1>
