:alembic: Test for projects

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">저에게 연락하고 싶으시다면?</h2>
+                <h2 class="section-heading">Contact</h2>
                 <hr class="primary">
                 <p>아래의 블로그, 이메일, 깃헙 중 편한 방법으로 연락해주세요.<br>
                     가능한 한 빨리 답변 드리겠습니다!</p>
