--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -2,7 +2,14 @@
 <html lang="en">
   {% include head.html %}
 
+  <!-- prettier-ignore -->
   <body id="page-top">
-    {% include nav.html %} {% include header.html %} {% include call-to-action.html %} {% include skills.html %} {% include portfolio.html %} {% include contact.html %} {% include scripts.html %}
+    {% include nav.html %}
+    {% include header.html %}
+    {% include call-to-action.html %}
+    {% include skills.html %}
+    {% include projects.html %}
+    {% include contact.html %}
+    {% include scripts.html %}
   </body>
 </html>
