--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -1,13 +1,9 @@
 {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-<div class="container">
+<div class="post-header" style="background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('{{page.image}}');">
   <h1>{{ page.title }}</h1>
-  <h4 class="post-description">{{ page.description }}</h4>
+  <h4 class="post-description text-faded">{{ page.description }}</h4>
   <div class="post-date" style="margin-top:20px">
-    Published on {{ page.date | date: date_format }}
+    {{ page.project-date }} <br />
+    position: {{page.position}}
   </div>
-  <ul class="post-tags">
-    {%- for tag in page.categories -%}
-    <li>{{ tag }}</li>
-    {%- endfor -%}
-  </ul>
 </div>
