--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,19 +1,29 @@
-<!-- prettier-ignore -->
 <selection id="projects">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Projects</h2>
-        <hr class="primary" />
+    <div class="col-lg-12 text-center">
+      <h2 class="section-heading">Projects</h2>
+      <hr class="primary" />
+    </div>
+
+    <!-- prettier-ignore -->
+    {% for post in site.posts %}
+    <a href="{{post.url | relative_url}}" class="portfolio-box">
+      <img src="{{post.image}}" class="img-responsive" alt="" />
+      <div class="portfolio-box-caption">
+        <div class="portfolio-box-caption-content">
+          <div class="project-name">
+            {{post.title}}
+          </div>
+          <div class="project-category text-faded">
+            {{post.description}}
+          </div>
+          <p class="text-faded">
+            {{post.project-date}}
+            <p>position: {{post.position}}</p>
+          </p>
+        </div>
       </div>
-    {% for project in site.data.projects %}
-      <div class="row">
-        </div>
-          {% for image in project.images %}
-            {% include {{ image.layout | append: ".html" }} item=image %}
-          {% endfor %}
-        </div>
-        {% include {{ project.layout | default: 'left' | append: ".html" }} item=project %}
-      <div>
+    </a>
     {% endfor %}
+  </div>
 </selection>
