--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -347,3 +347,16 @@ img::-moz-selection {
 body {
   -webkit-tap-highlight-color: $theme-dark;
 }
+
+// my style
+.post-header {
+  display: block;
+  object-fit: cover;
+  border-radius: 0px;
+  width: 100%;
+  height: 30vh;
+  opacity: 1;
+  object-position: center 48.28%;
+
+  padding-top: 6vh;
+}
