:construction: Add navigation in post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@
     {%- include head.html -%}
   </head>
   <body>
+    {% include nav.html %}
     <header class="texture-{{ site.texture.style }}">
       {%- include post_header.html -%}
     </header>
