--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,23 +8,23 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand page-scroll" href="#page-top">rami tae</a>
+      <a class="navbar-brand page-scroll" href="/#page-top">rami tae</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a class="page-scroll" href="#about">About</a>
+          <a class="page-scroll" href="/#about">About</a>
         </li>
         <li>
-          <a class="page-scroll" href="#skills">Skills</a>
+          <a class="page-scroll" href="/#skills">Skills</a>
         </li>
         <li>
-          <a class="page-scroll" href="#projects">Projects</a>
+          <a class="page-scroll" href="/#projects">Projects</a>
         </li>
         <li>
-          <a class="page-scroll" href="#contact">Contact</a>
+          <a class="page-scroll" href="/#contact">Contact</a>
         </li>
       </ul>
     </div>
