--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,34 +5,10 @@
   </head>
   <body>
     {% include nav.html %}
-    <header class="texture-{{ site.texture.style }}">
-      {%- include post_header.html -%}
-    </header>
-    <main>
-      <div class="container">
-        <div class="post-container">
-          {{ content }}
-        </div>
-
-        <!-- Configure Disqus -->
-        {%- if site.texture.disqus_shortname -%}
-        <div id="disqus_thread" style="margin-top:25px"></div>
-        <script>
-          var disqus_config = function() {
-            this.page.url = "{{ page.url | absolute_url }}";
-            this.page.identifier = "{{ page.url | absolute_url }}";
-          };
-          (function() {
-            var d = document,
-              s = d.createElement("script");
-            s.src = "https://{{ site.texture.disqus_shortname }}.disqus.com/embed.js";
-            s.setAttribute("data-timestamp", +new Date());
-            (d.head || d.body).appendChild(s);
-          })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-        {%- endif -%}
-      </div>
-    </main>
+    <!-- prettier-ignore -->
+    {%- include post_header.html -%}
+    <div class="post-container">
+      {{ content }}
+    </div>
   </body>
 </html>
