--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -358,5 +358,57 @@ body {
   opacity: 1;
   object-position: center 48.28%;
 
-  padding-top: 6vh;
+  color: white;
+  // padding-top: 8vh;
+  // padding-left: 150px;
+}
+
+.post-container {
+  padding-top: 8vh;
+  margin: 0 150px;
+  max-width: 720px;
+
+  div.highlighter-rouge {
+    right: 150px;
+  }
+
+  @media screen and (max-width: $mobileWidth) {
+    margin: 0 15px;
+    div.highlighter-rouge {
+      right: 15px;
+    }
+    div.highlight {
+      padding: 30px 15px;
+    }
+  }
+
+  @media screen and (max-width: $tabWidth) and (min-width: $mobileWidth) {
+    margin: 0 40px;
+    div.highlighter-rouge {
+      right: 40px;
+    }
+    div.highlight {
+      padding: 30px 40px;
+    }
+  }
+
+  @media screen and (max-width: $desktopWidth) and (min-width: $tabWidth) {
+    margin: 0 80px;
+    div.highlighter-rouge {
+      right: 80px;
+    }
+    div.highlight {
+      padding: 30px 80px;
+    }
+  }
+
+  @media screen and (min-width: $desktopWidth) and (max-width: 1280px) {
+    margin: 0 100px;
+    div.highlighter-rouge {
+      right: 100px;
+    }
+    div.highlight {
+      padding: 30px 100px;
+    }
+  }
 }
