--- a/css/main.scss
+++ b/css/main.scss
@@ -36,9 +36,9 @@
 // variables.less
 $theme-primary: #ecad00;
 $theme-dark: #222;
-// $mobileWidth: 540px;
-// $tabWidth: 768px;
-// $desktopWidth: 1024px;
+$mobileWidth: 540px;
+$tabWidth: 768px;
+$desktopWidth: 1024px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "mixins", "base";
