:lipstick: Make contents to set center

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -367,6 +367,7 @@ body {
   padding-top: 8vh;
   margin: 0 150px;
   max-width: 720px;
+  margin: 0 auto;
 
   div.highlighter-rouge {
     right: 150px;
