:art: Make post-nav file for post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
     {%- include head.html -%}
   </head>
   <body>
-    {% include nav.html %}
+    {% include post-nav.html %}
     <!-- prettier-ignore -->
     {%- include post_header.html -%}
     <div class="post-container">
