--- a/_includes/post_header.html
+++ b/_includes/post_header.html
@@ -1,9 +1,9 @@
 {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
 <div class="post-header" style="background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('{{page.image}}');">
-  <div class="post-container">
+  <div class="post container" style="padding-bottom: 4vh;">
     <h1>{{ page.title }}</h1>
-    <h4 class="post-description text-faded">{{ page.description }}</h4>
-    <div class="post-date" style="margin-top:20px">
+    <h4 class="text-faded">{{ page.description }}</h4>
+    <div style="margin-top:20px">
       {{ page.project-date }} <br />
       position: {{page.position}}
     </div>
