--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
     {% include post-nav.html %}
     <!-- prettier-ignore -->
     {%- include post_header.html -%}
-    <div class="post-container">
+    <div class="post container">
       {{ content }}
     </div>
   </body>
