--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,6 +9,7 @@
     {% include call-to-action.html %}
     {% include skills.html %}
     {% include projects.html %}
+    {% include experience.html %}
     {% include contact.html %}
     {% include scripts.html %}
   </body>
