--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,4 +1,4 @@
-<selection id="projects">
+<section id="projects">
   <div class="container">
     <div class="col-lg-12 text-center">
       <h2 class="section-heading">Projects</h2>
@@ -28,4 +28,4 @@
   </div>
     {% endfor %}
   </div>
-</selection>
+</section>
