:pencil: Add config data in header and contact

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,25 +4,31 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Contact</h2>
                 <hr class="primary">
-                <p>아래의 블로그, 이메일, 깃헙 중 편한 방법으로 연락해주세요.<br>
+                <p>아래의 블로그, 이메일, 깃헙, 링크드인 중 편한 방법으로 연락해주세요.<br>
                     가능한 한 빨리 답변 드리겠습니다!</p>
             </div>
         <div class="col-lg-2 col-lg-offset-2 text-center">
-            <a href="https://ram-t.tistory.com/">
+            <a href="{{site.blog_url}}">
                 <i class="fa fa-rss fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>https://ram-t.tistory.com/</p>
+                <p>{{site.blog_url}}</p>
             </a>
         </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="mailto:ramiTae.dev@gmail.com">
+            <a href="mailto:{{site.email}}">
             <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>ramiTae.dev@gmail.com</p>
+                <p>{{site.email}}</p>
             </a>
         </div>
         <div class="col-lg-2 col-lg-offset-1 text-center">
-            <a href="https://github.com/RamiTae">
+            <a href="https://github.com/{{site.github_username}}">
             <i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                <p>RamiTae</p>
+                <p>{{site.github_username}}</p>
+            </a>
+        </div>
+        <div class="col-lg-2 col-lg-offset-1 text-center">
+            <a href="https://www.linkedin.com/in/{{site.linkedIn_username}}">
+            <i class="fa fa-linkedin fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                <p>{{site.linkedIn_username}}</p>
             </a>
         </div>
 
