--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,11 @@ background-image: url('{{site.asset_url}}/portfolio-main.jpg');">
       <hr />
       <p>
         <b>ramiTae.dev@gmail.com<b/><br>
-        <a href="https://github.com/RamiTae"><b>Github<b/></a> | <a href="https://ram-t.tistory.com/"><b>Blog<b/></a> 
+        <a href="https://github.com/{{site.github_username}}"><b>Github<b/></a>
+        | 
+        <a href="https://www.linkedin.com/in/{{site.linkedIn_username}}">LinkedIn</a>
+        |
+        <a href="{{site.blog_url}}"><b>Blog<b/></a>
       </p>
       <a href="http://bit.ly/ramitae-resume" target="_blank" class="btn btn-primary btn-xl">Resume</a>
     </div>
