--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -8,12 +8,15 @@
     </div>
   </div>
   <div class="row">
+    {% for experience in site.data.experience %}
     <div class="col-lg-12 text-center">
-      <h3>플라토</h3>
-      <h4 class="text-muted">연구개발팀 임베디드S/W 연구원</h4>
-      <h5 class="text-muted">2016/08 ~ 2017/06</h5>
-      - C언어를 사용하여 차량 안테나 제어 펌웨어(8bit MCU) 개발 및 보수 <br />
-      - C#과 MVVM 모델을 이용하여 UART 신호를 받고 데이터를 파일로 출력하는 PC 프로그램 개발 및 보수
+      <h3>{{ experience.company }}</h3>
+      <h4 class="text-muted">{{ experience.position }}</h4>
+      <h5 class="text-muted">{{ experience.dates }}</h5>
+      <h5 class="text-muted"><em>{{ experience.quote }}</em></h5>
+      <br />
+      {{ experience.description }}
     </div>
+    {% endfor %}
   </div>
 </section>
