:lipstick: Update main image

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header style="
-background-image: url('{{site.asset_url}}/portfolio-main.jpg');">
+background-image: url('{{site.asset_url}}/code_main.jpg');">
   <div class="header-content">
     <div class="header-content-inner">
       <h1>태라미<br />rami tae</h1>
