--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,6 +2,7 @@
   <div class="container">
     <div class="col-lg-12 text-center">
       <h2 class="section-heading">Projects</h2>
+      <h5>아래 이미지를 클릭하면 상세 내용을 확인할 수 있습니다.</h5>
       <hr class="primary" />
     </div>
 
