--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -14,7 +14,10 @@
     </div>
     <div class="col-lg-12 text-center">
       <h3>Backend Tools</h3>
-      <p class="text-muted">NodeJS, Express, MySQL, Sequelize, TypeORM, AWS S3/EC2/RDS</p>
+      <p class="text-muted">
+        NodeJS, Express, MySQL, Sequelize, TypeORM,<br />
+        AWS S3 / EC2 / RDS / CloudFront / ELB / Route53 / Auto Scaling
+      </p>
     </div>
     <div class="col-lg-12 text-center">
       <h3>Basic Knowledge</h3>
